fix box's padding on mobile views

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -267,6 +267,10 @@
 .width-fit-content { width : fit-content; }
 /*************************************************** WIDTH */
 
+/* MIN-WIDTH ***********************************************/
+.min-width-fit-content { min-width : fit-content; }
+/*********************************************** MIN-WIDTH */
+
 /* HEIGHT ***************************************************/
 .height-100p { height : 100%; }
 .height-inherit { height : inherit; }
